<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/requestPharma"
            android:icon="@drawable/medicalrequest"
            android:title="@string/request_pharma" />
        <item
            android:id="@+id/oldReqPharma"
            android:icon="@drawable/oldrequest"
            android:title="@string/old_req" />
        <item
            android:id="@+id/profilePharma"
            android:icon="@drawable/profile"
            android:title="@string/profile_drawer" />


    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/settingsPharma"
                android:icon="@drawable/settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/logoutPharma"
                android:icon="@drawable/round_logout_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>