<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/articlePatient"
            android:icon="@drawable/article"
            android:title="@string/article" />
        <item
            android:id="@+id/profilePatient"
            android:icon="@drawable/profile"
            android:title="@string/profile_drawer" />



    </group>
    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/settingsPatient"
                android:icon="@drawable/settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/round_logout_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>